--- a/music-manage/public/index.html
+++ b/music-manage/public/index.html
@@ -1,3 +1,4 @@
+<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="">
   <head>
@@ -13,5 +14,9 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <script>
+      window.NODE_HOST = "${NODE_HOST}";
+    </script>
   </body>
 </html>
